--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
 API_ID=26602863
 API_HASH=44a687eb7cac4df75d9332a65eece369
-BOT_TOKEN=
-LOGGER_ID=
+BOT_TOKEN=7032716003:AAFciDiTLx9iPFSCbVjVDpmG-oX0eIPZlE0
+LOGGER_ID=1002056908015
 MONGO_DB_URI=
-OWNER_ID=
+OWNER_ID=5787354656
 STRING_SESSION=
